--- a/src/app/Pages/second-engine/second-engine.component.css
+++ b/src/app/Pages/second-engine/second-engine.component.css
@@ -1,118 +1,119 @@
 *{
-    margin: 0;
-    padding: 0;
-    font-family: 'Poppins', sans-serif;
-    color: #fff;
+  margin: 0;
+  padding: 0;
+  font-family: 'Poppins', sans-serif;
+  color: #fff;
+}
+img{
+  width: 100%;
+}
+.container{
+  display:grid;
+  grid-template-areas: "main-title main-title"
+                       "main-content main-illustration"
+                       "nothing btns"
+                       "footer footer";
+  grid-template-columns: 1fr 1fr;
+  margin-left: 10%;
+  margin-right: 10%;
+  height: 85vh;
+  grid-gap: 5%;
+}
+.main-title{
+  grid-area: main-title;
+  justify-self: center;
+  margin-top: 10%;
+}
+.main-title h1{
+  font-size: 45px;
+}
+.main-content{
+  grid-area: main-content;
+  align-self: center;
+}
+.btns{
+  grid-area: btns;
+  display: grid;
+  grid-template-areas:"btn-test txt-or btn-buy";
+  grid-template-columns: 2fr 1fr 2fr;
+}
+.main-illustration{
+  grid-area: main-illustration;
+}
+.btn-test{
+  grid-area: btn-test;
+  align-self: center;
+}
+.txt-or{
+  grid-area: txt-or;
+  justify-self: center;
+  align-self: center;
+}
+.btn-buy{
+  grid-area: btn-buy;
+  align-self: center;
+}
+.btn{
+  text-align: center;
+  text-decoration: none;
+  color: #fff;
+  font-weight: bold;
+  display: block;
+  font-size: 15px;
+  padding: 20px 25px;
+  text-transform: uppercase;
+  position: relative;
+  background: #cf006b;
+  border-radius: 5px;
+  cursor: pointer;
+}
+.btn:hover{
+  background: #a00053;
+}
+span{
+  font-size: 26px;
+}
+
+.footer{
+  grid-area: footer;
+  padding-top: 200px;
+}
+@media only screen and (max-width: 1025px){
+  .main-title{
+    margin-top: 20%;
   }
-  img{
-    width: 100%;
-  }
+}
+@media only screen and (max-width: 799px){
   .container{
-    display:grid;
-    grid-template-areas: "main-title main-title"
-                         "main-content second-container"
-                         "footer footer";
-    grid-template-columns: 1fr 1fr;
-    margin-left: 10%;
-    margin-right: 10%;
-    height: 85vh;
-    grid-gap: 5%;
+      grid-template-areas: "main-title"
+                           "second-container"
+                           "main-content";
+      grid-template-columns: 1fr;
+      padding-top: 15%;
   }
   .main-title{
-    grid-area: main-title;
-    justify-self: center;
     margin-top: 10%;
   }
   .main-title h1{
-    font-size: 45px;
-  }
-  .main-content{
-    grid-area: main-content;
-  }
-  .second-container{
-    grid-area: second-container;
-    display: grid;
-    grid-template-areas: "main-illustration main-illustration main-illustration"
-                         "btn-test txt-or btn-buy";
-    grid-template-columns: 2fr 1fr 2fr;
-  }
-  .main-illustration{
-    grid-area: main-illustration;
-  }
-  .btn-test{
-    grid-area: btn-test;
-    align-self: center;
-  }
-  .txt-or{
-    grid-area: txt-or;
-    justify-self: center;
-    align-self: center;
-  }
-  .btn-buy{
-    grid-area: btn-buy;
-    align-self: center;
+      font-size: 32px;
   }
   .btn{
-    text-align: center;
-    text-decoration: none;
-    color: #fff;
-    font-weight: bold;
-    display: block;
-    font-size: 15px;
-    padding: 20px 25px;
-    text-transform: uppercase;
-    position: relative;
-    background: #cf006b;
-    border-radius: 5px;
-    cursor: pointer;
+      padding: 10px 10px;
   }
-  .btn:hover{
-    background: #a00053;
-  }
-  span{
-    font-size: 26px;
-  }
-  
-  .footer{
-    grid-area: footer;
-    padding-top: 200px;
-  }
-  @media only screen and (max-width: 1025px){
-    .main-title{
-      margin-top: 20%;
-    }
-  }
-  @media only screen and (max-width: 799px){
-    .container{
-        grid-template-areas: "main-title"
-                             "second-container"
-                             "main-content";
-        grid-template-columns: 1fr;
-        padding-top: 15%;
-    }
-    .main-title{
+  .main-illustration{
       margin-top: 10%;
-    }
-    .main-title h1{
-        font-size: 32px;
-    }
-    .btn{
-        padding: 10px 10px;
-    }
-    .main-illustration{
-        margin-top: 10%;
-    }
-  
   }
-  @media only screen and (max-width: 369px){
-    .btn{
-        padding: 6px 6px;
-        margin-top: 15%;
-    }
-    .main-illustration{
-        margin-top: 15%;
-    }
-    .txt-or{
-        margin-top: 15%;
-    }
+
+}
+@media only screen and (max-width: 369px){
+  .btn{
+      padding: 6px 6px;
+      margin-top: 15%;
   }
+  .main-illustration{
+      margin-top: 15%;
+  }
+  .txt-or{
+      margin-top: 15%;
+  }
+}
